src/test/resources/refCompilerOutput/invalid/syntaxErr/while/whileNodone.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 14:0 -- mismatched input 'end' expecting {'done', ';'}
1 parser error(s) detected, no further compilation attempted.
